--- a/MovieSite/build.gradle
+++ b/MovieSite/build.gradle
@@ -33,6 +33,10 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    implementation project(':module-domain')
+    implementation project(':module-application')
+
 }
 
 tasks.named('test') {
@@ -40,3 +44,46 @@ tasks.named('test') {
 }
 
 
+subprojects {
+    apply plugin: 'java'
+    apply plugin: 'java-library'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+
+    configurations {
+        compileOnly {
+            extendsFrom annotationProcessor
+        }
+    }
+
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter'
+        compileOnly 'org.projectlombok:lombok'
+        annotationProcessor 'org.projectlombok:lombok'
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    }
+
+    tasks.named('test') {
+        useJUnitPlatform()
+    }
+}
+
+project(":module-application") {
+    dependencies {
+        implementation project(":module-presentation")
+        implementation project(":module-domain")
+        implementation project(":module-common")
+    }
+}
+
+project(":module-domain") {
+    dependencies {
+        implementation project(":module-common")
+        implementation project(":module-presentation")
+    }
+}
