--- a/MovieSite/settings.gradle
+++ b/MovieSite/settings.gradle
@@ -2,4 +2,4 @@ rootProject.name = 'MovieSite'
 include 'module-common'
 include 'module-application'
 include 'module-domain'
-include 'module-presentation'
+include 'module-infra'
